shelly's swagger doc
